# comet2txt

./: .gitignore  License.txt  ReadMe.md  comet2txt.py  pyproject.toml
.github/workflows/: main.yml
src/comet2txt/: __init__.py  __main__.py  comet2txt.py
tests/: comet.S  comet.asm  test.S  test.asm  test_convert.py
