[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "comet2txt"
version = "1.0.1"
description = "Convert SAM Coupé Comet assembler source code to ASCII text"
readme = "ReadMe.md"
license = "MIT"
authors = [
    { name = "Simon Owen", email = "simon@simonowen.com" }
]
keywords = ["comet", "convert", "sam", "coupe"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Assembly",
    "Topic :: File Formats",
    "Topic :: Text Processing :: Filters",
    "Topic :: Utilities",
]
requires-python = ">=3.10"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/comet2txt"]

[project.scripts]
comet2txt = "comet2txt:main"

[project.urls]
Homepage = "https://github.com/simonowen/comet2txt"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ty>=0.0.1a0",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
source_pkgs = ["comet2txt"]

[tool.ruff]
target-version = "py310"
line-length = 115

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E226", "E265"] # relax some whitespace rules
